sumo/tests/dfrouter/errors/detector_flow_files/broken_detectors_flows_file1b/errors.dfrouter
Error: The detector-flow-file 'input_flows.txt' is corrupt;
 The following values must be supplied : 'Detector', 'Time', 'qPKW', 'vPKW'
 The according column names must be given in the first line of the file.
Quitting (on error).
